# dashboard

./: .gitignore  README.md  pyproject.toml  requirements.txt  server.py
static/css/: style.css
static/js/: dashboard.js
templates/: dashboard.html
