[project]
name = "phone-dashboard"
version = "0.1.0"
description = "Pocophone Server Dashboard for PostmarketOS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
    "requests>=2.31.0",
    "psutil>=5.9.6",
]

[project.scripts]
dashboard = "server:main"

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"